[package]
name = "mycelium-spore"
version = "0.0.0"
description = "spore — packaging & publishing (M-368; ADR-013): builds a content-addressed deployable `spore` from a `mycelium-proj.toml` project. Identity is the content-addressed DAG (code-by-hash + dependency edges + surface); metadata (version/authors/…) is NOT identity (ADR-003). A missing/ambiguous publish input is an explicit error, never a guess (G2). KC-3 — above the kernel; no new dependency."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
# The manifest layer (M-359) + the kernel content-address type (ADR-003) + the workspace-pinned hasher.
# No NEW external dependency: blake3 is already a vetted workspace dependency (mycelium-core, -lsp).
mycelium-proj = { path = "../mycelium-proj" }
mycelium-core = { path = "../mycelium-core" }
blake3.workspace = true

[dev-dependencies]
# Property-based testing for the registry hash-verification bound (M-732 DoD). Same major as the
# rest of the workspace (mycelium-numerics et al.); dev-only — no runtime dependency added (KC-3).
proptest = "1"

[[bin]]
name = "spore"
path = "src/bin/spore.rs"
