[package]
name = "mycelium-stack"
version = "0.0.0"
description = "Host-stack management for the L1 frontend's recursive passes (checker/elaborator), kept OUTSIDE the trusted kernel (`mycelium-l1`) so the kernel stays `unsafe`-free and auditable (ADR-014, KC-3). Default `with_deep_stack` is std-only and `unsafe`-free; any future grow-on-demand stack growth is the one place upstream `unsafe` would be contained — behind a leaf dependency, never in Mycelium-authored source. The explicit depth budgets stay in the kernel (the portable, self-hosting primitive); this crate is the transitional Rust-host adapter."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]

# --- Grow-on-demand hybrid (RFC-0041 §4.3; Wave-2) --------------------------------------------------
# The "large stack + grow-on-demand" hybrid lands HERE, never in the kernel: `stacker::maybe_grow`
# (a SAFE API — the stack-switching `unsafe` is internal to the `stacker` leaf crate, whose inline asm
# goes to `psm`, the furthest possible point from the trusted kernel — ADR-014/KC-3). This crate's own
# source stays `#![forbid(unsafe_code)]` (it calls only safe APIs), so no Mycelium-authored `unsafe`
# exists; the `unsafe` is contained in a single audited upstream leaf.
#
# Runtime-gated, NOT cargo-feature-gated (§4.3): growth availability is probed at runtime via
# `stacker::remaining_stack()`, never a `--cfg`/feature flag — so a no-grow target (wasm32, where `psm`
# is a silent no-op) is DETECTED and SURFACED (G2), never a silent degrade.
#
# EXACT-pinned (RFC-0041 §5 supply-chain): no `^`/`~` caret/tilde drift — a new upstream version is an
# explicit, reviewed bump (re-run geiger baseline), never an automatic float into new `unsafe`. `psm`
# is `stacker`'s (transitive) source of the inline-asm `unsafe`; it is NOT a direct dependency of this
# crate (we call only `stacker`), so it is pinned via `Cargo.lock`, not a manifest line — see the
# geiger-baseline FLAG to the integrator. Bump both together and re-baseline geiger on any change.
stacker = "=0.1.24"
