[package]
name = "mycelium-std-cmp"
version = "0.0.0"
description = "std.cmp/convert — ordering, equality, non-representation conversion."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
mycelium-core = { path = "../mycelium-core" }
mycelium-std-core = { path = "../mycelium-std-core" }
