[package]
name = "mycelium-std-collections"
version = "0.0.0"
description = "std.collections — value-semantic collections (no silent reorder)."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[dependencies]
mycelium-core = { path = "../mycelium-core" }
mycelium-std-core = { path = "../mycelium-std-core" }
