[package]
name = "mycelium-std-core"
version = "0.0.0"
description = "std.core — Ring-0 prelude: the honest value model re-exported (M-515)."
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
publish = false

[lints]
workspace = true

[features]
# Expose the `error_scaffold` test helpers (`assert_is_std_error`, `assert_display_contains`)
# to *other* crates' test suites. Off by default — the helpers are `#[cfg(test)]`-equivalent
# and add no surface to a normal build. A downstream crate enables this only under
# `[dev-dependencies]` (M-535, E5-1; DN-17 §4 P3).
test-support = []

[dependencies]
mycelium-core = { path = "../mycelium-core" }
